--- a/Cafe/App.config
+++ b/Cafe/App.config
@@ -14,5 +14,6 @@
     <add key="columns" value ="10"/>
     <add key="tables" value="85"/>
     <add key="messageBoxDuration" value="10"/>
+    <add key="sound" value="true"/>
   </appSettings>
 </configuration>
