--- a/BinaryFormatter/BinaryFormatter.csproj
+++ b/BinaryFormatter/BinaryFormatter.csproj
@@ -4,14 +4,13 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{0CC8AB8F-4099-463D-94A1-70EECB828A74}</ProjectGuid>
+    <ProjectGuid>{284527D3-F759-4A59-B137-1FFCB25DA49D}</ProjectGuid>
     <OutputType>WinExe</OutputType>
-    <RootNamespace>Cafe</RootNamespace>
-    <AssemblyName>Cafe</AssemblyName>
-    <TargetFrameworkVersion>v4.5</TargetFrameworkVersion>
+    <RootNamespace>BinaryFormatter</RootNamespace>
+    <AssemblyName>BinaryFormatter</AssemblyName>
+    <TargetFrameworkVersion>v4.6.1</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <AutoGenerateBindingRedirects>true</AutoGenerateBindingRedirects>
-    <TargetFrameworkProfile />
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
     <PlatformTarget>AnyCPU</PlatformTarget>
@@ -32,14 +31,8 @@
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
-  <PropertyGroup>
-    <ApplicationIcon>appicon.ico</ApplicationIcon>
-  </PropertyGroup>
   <ItemGroup>
     <Reference Include="System" />
-    <Reference Include="System.Configuration">
-      <Private>True</Private>
-    </Reference>
     <Reference Include="System.Core" />
     <Reference Include="System.Xml.Linq" />
     <Reference Include="System.Data.DataSetExtensions" />
@@ -52,65 +45,16 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="ConnectionParameters.cs">
+    <Compile Include="frmMain.cs">
       <SubType>Form</SubType>
     </Compile>
-    <Compile Include="ConnectionParameters.Designer.cs">
-      <DependentUpon>ConnectionParameters.cs</DependentUpon>
-    </Compile>
-    <Compile Include="CustomButton.cs">
-      <SubType>UserControl</SubType>
-    </Compile>
-    <Compile Include="CustomButton.Designer.cs">
-      <DependentUpon>CustomButton.cs</DependentUpon>
-    </Compile>
-    <Compile Include="frmAppConfig.cs">
-      <SubType>Form</SubType>
-    </Compile>
-    <Compile Include="frmAppConfig.Designer.cs">
-      <DependentUpon>frmAppConfig.cs</DependentUpon>
-    </Compile>
-    <Compile Include="frmMasa.cs">
-      <SubType>Form</SubType>
-    </Compile>
-    <Compile Include="frmMasa.Designer.cs">
-      <DependentUpon>frmMasa.cs</DependentUpon>
-    </Compile>
-    <Compile Include="frmAdisyon.cs">
-      <SubType>Form</SubType>
-    </Compile>
-    <Compile Include="frmAdisyon.Designer.cs">
-      <DependentUpon>frmAdisyon.cs</DependentUpon>
-    </Compile>
-    <Compile Include="MessageBoxForm.cs">
-      <SubType>Form</SubType>
-    </Compile>
-    <Compile Include="MessageBoxForm.Designer.cs">
-      <DependentUpon>MessageBoxForm.cs</DependentUpon>
+    <Compile Include="frmMain.Designer.cs">
+      <DependentUpon>frmMain.cs</DependentUpon>
     </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="SwitchBox.cs">
-      <SubType>Component</SubType>
-    </Compile>
-    <Compile Include="Util.cs" />
-    <EmbeddedResource Include="ConnectionParameters.resx">
-      <DependentUpon>ConnectionParameters.cs</DependentUpon>
-    </EmbeddedResource>
-    <EmbeddedResource Include="CustomButton.resx">
-      <DependentUpon>CustomButton.cs</DependentUpon>
-    </EmbeddedResource>
-    <EmbeddedResource Include="frmAppConfig.resx">
-      <DependentUpon>frmAppConfig.cs</DependentUpon>
-    </EmbeddedResource>
-    <EmbeddedResource Include="frmMasa.resx">
-      <DependentUpon>frmMasa.cs</DependentUpon>
-    </EmbeddedResource>
-    <EmbeddedResource Include="frmAdisyon.resx">
-      <DependentUpon>frmAdisyon.cs</DependentUpon>
-    </EmbeddedResource>
-    <EmbeddedResource Include="MessageBoxForm.resx">
-      <DependentUpon>MessageBoxForm.cs</DependentUpon>
+    <EmbeddedResource Include="frmMain.resx">
+      <DependentUpon>frmMain.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
@@ -120,7 +64,6 @@
     <Compile Include="Properties\Resources.Designer.cs">
       <AutoGen>True</AutoGen>
       <DependentUpon>Resources.resx</DependentUpon>
-      <DesignTime>True</DesignTime>
     </Compile>
     <None Include="Properties\Settings.settings">
       <Generator>SettingsSingleFileGenerator</Generator>
@@ -134,15 +77,6 @@
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
-  </ItemGroup>
-  <ItemGroup>
-    <Content Include="appicon.ico" />
-    <Content Include="button16.wav">
-      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
-    </Content>
-    <Content Include="tone_beep.wav">
-      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
-    </Content>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
