--- a/Cafe/App.config
+++ b/Cafe/App.config
@@ -15,5 +15,6 @@
     <add key="tables" value="85"/>
     <add key="messageBoxDuration" value="10"/>
     <add key="sound" value="true"/>
+    <add key="notifyIcon" value="true"/>
   </appSettings>
 </configuration>
