--- a/Cafe/App.config
+++ b/Cafe/App.config
@@ -6,15 +6,15 @@
   <appSettings>
     <add key="appName" value ="Cafe"/>
     <add key="serverFileName" value ="server.txt"/>
-    <add key="server" value =".\neuroogle1"/>
+    <add key="server" value =".\sqlexpress"/>
     <add key ="database" value="BDY_CAFE"/>
     <add key ="user" value ="sa"/>
     <add key="password" value ="1453"/>
-    <add key="rows" value ="9"/>
+    <add key="rows" value ="6"/>
     <add key="columns" value ="10"/>
-    <add key="tables" value="85"/>
+    <add key="tables" value="60"/>
     <add key="messageBoxDuration" value="10"/>
-    <add key="sound" value="true"/>
-    <add key="notifyIcon" value="true"/>
+    <add key="sound" value="false"/>
+    <add key="notifyIcon" value="false"/>
   </appSettings>
 </configuration>
